#版本设置
cmake_minimum_required(VERSION 2.8)
#项目名
project(C_TEST)

#添加自制库
include_directories(include)
#添加可执行文件
# add_executable(stackUseLinkedlist stack/stackUseLinkedlist.cpp)
# add_executable(reverseLinkedList stack/reverseLinkedList.cpp)
# add_executable(reverseStringArray stack/reverseStringArray.cpp)
# add_executable(bracketMatching stack/bracketMatching.cpp)

# add_executable(replaceSpace string/replaceSpace.cpp)

# add_executable(findMaxSubArr array/findMaxSubArr.cpp)


# add_executable(insertSort sort/insertSort.cpp)
# add_executable(merge sort/merge.cpp)
# add_executable(mergeSort sort/mergeSort.cpp)
# add_executable(mergeVector sort/mergeVector.cpp)

# add_executable(selectionSort sort/selectionSort.cpp)
# # add_executable(bubbleSort sort/bubbleSort.cpp)
# add_executable(divideANDconquer sort/divideANDconquer.cpp)
# add_executable(quickSort sort/quickSort.cpp)

add_executable(creatABST tree/creatABST.cpp)

# add_executable(bubblesort1A chapter1/bubblesort1A.cpp)
# add_executable(creatAList linkedList/creatAList.cpp)
# add_executable(creatAList2 linkedList/creatAList2.cpp)
# add_executable(creatAList3 linkedList/creatAList3.cpp)
# add_executable(ListReverse linkedList/ListReverse.cpp)
# add_executable(ListDelete linkedList/ListDelete.cpp)
# add_executable(ListReversePrintRecu linkedList/ListReversePrintRecu.cpp)
# add_executable(DoublyListCreat linkedList/DoublyListCreat.cpp)
# add_executable(leet2copy linkedList/leet2copy.cpp)
# add_executable(leet2 linkedList/leet2.cpp)

# add_executable(countOnes chapter1/countOnes.cpp)
# add_executable(sum chapter1/sum.cpp)
# add_executable(reverse  chapter1/reverse.cpp)
# add_executable(power chapter1/power.cpp)
# add_executable(fib chapter1/fibonacci.cpp)

# add_executable(swapTest swapTest.cpp src/swap.cpp)
# add_executable(2.7_1 2.7_1.cpp )
# add_executable(2.7_2 2.7_2.cpp )
# add_executable(2.7_3 2.7_3.cpp src/2.7_3_func.cpp)
# add_executable(2.7_4 2.7_4.cpp )
# add_executable(3.7.1 3.7.1.cpp )
# add_executable(3.7.3 3.7.3.cpp )
# add_executable(3.7.4 3.7.4.cpp )
# add_executable(3.10 3.10.cpp )
# add_executable(4.13.1 4.13.1.cpp )
# add_executable(4.13.2 4.13.2.cpp )
# add_executable(4.13.4 4.13.4.cpp )
# add_executable(4.13.5 4.13.5.cpp )
# add_executable(4.13.8 4.13.8.cpp )
# add_executable(4.13.9 4.13.9.cpp )
# add_executable(4.13.10 4.13.10.cpp)
# add_executable(4_test 4_test.cpp)
# add_executable(5.9.2 5.9.2.cpp)
# add_executable(5.9.3 5.9.3.cpp)
# add_executable(5.9.4 5.9.4.cpp)
# add_executable(5.9.5 5.9.5.cpp)
# add_executable(5.9.7 5.9.7.cpp)
# add_executable(5.9.8 5.9.8.cpp)
# add_executable(5.9.10 5.9.10.cpp)
# add_executable(6.10.3 6.10.3.cpp)
# add_executable(6.11.1 6.11.1.cpp)
# add_executable(6.11.2 6.11.2.cpp)
# add_executable(6.11.3 6.11.3.cpp)
# add_executable(6.11.4 6.11.4.cpp)
# add_executable(6.11.5 6.11.5.cpp)
# add_executable(6.11.6 6.11.6.cpp)
# add_executable(6.11.7 6.11.7.cpp)
# add_executable(6.11.8 6.11.8.cpp)
# add_executable(6.11.9 6.11.9.cpp)
# add_executable(7.13.1 7.13.1.cpp)
# add_executable(7.13.2 7.13.2.cpp)
# add_executable(7.13.3 7.13.3.cpp)
# add_executable(7.13.4 7.13.4.cpp)
# add_executable(7.13.5 7.13.5.cpp)
# add_executable(7.13.6 7.13.6.cpp)
# add_executable(7.13.7 7.13.7.cpp)
# add_executable(7.13.8 7.13.8.cpp)
# add_executable(7.13.9 7.13.9.cpp)
# add_executable(7.13.10 7.13.10.cpp)
# add_executable(stringAndSTL1 stringAndSTL1.cpp)
# add_executable(stringAndSTL2 stringAndSTL2.cpp)








